feat: Add Interface, Service, Controller, and View for Rental
- Added IRentalService interface to Contracts folder
- Implemented RentalService in Services folder to handle Rental data
- Created RentalController in Controllers folder to expose API endpoints
  - GET /api/rental to read all rental data
  - GET /api/rental/{id} to read rental data by ID
- Added views in Views/Rentals folder for displaying rental data
  - Index.cshtml to display all rentals
  - Details.cshtml to display rental details by ID

--- a/WebVRMS/efpt.config.json
+++ b/WebVRMS/efpt.config.json
@@ -27,16 +27,16 @@
          "ObjectType": 0
       },
       {
-         "Name": "[dbo].[RentalUser]",
-         "ObjectType": 0
-      },
-      {
          "Name": "[dbo].[Users]",
          "ObjectType": 0
       },
       {
          "Name": "[dbo].[Vehicles]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[sp_GenerateMonthlyRentalReports]",
+         "ObjectType": 1
       }
    ],
    "UiHint": null,
